# account-reconcile

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
.oca/oca-port/blacklist/: account_reconcile_oca.json
account_in_payment/: README.rst
account_in_payment/i18n/: account_in_payment.pot
account_in_payment/static/description/: index.html
account_reconcile_model_oca/: README.rst  __manifest__.py
account_reconcile_model_oca/i18n/: account_reconcile_model_oca.pot  it.po  zh_CN.po
account_reconcile_model_oca/models/: account_bank_statement_line.py  account_reconcile_model.py
account_reconcile_model_oca/readme/: CONTRIBUTORS.md
account_reconcile_model_oca/tests/: common.py  test_reconciliation_match.py
account_reconcile_oca/: README.rst  __manifest__.py
account_reconcile_oca/i18n/: account_reconcile_oca.pot  ca.po  es.po  fr.po  hr.po  it.po  nl.po  pt.po  pt_BR.po  sv.po  tr.po  zh.po  zh_CN.po
account_reconcile_oca/models/: account_account_reconcile.py  account_bank_statement_line.py  account_journal.py  account_reconcile_abstract.py
account_reconcile_oca/tests/: test_bank_account_reconcile.py
account_reconcile_oca/views/: account_bank_statement.xml
account_statement_base/: README.rst  __manifest__.py
account_statement_base/i18n/: account_statement_base.pot  es.po  fr.po  it.po  pt_BR.po  zh.po  zh_CN.po
account_statement_base/models/: account_bank_statement.py
account_statement_base/views/: account_bank_statement.xml  account_bank_statement_line.xml
setup/_metapackage/: pyproject.toml
(+11 files in other folders)
