[project]
name = "odoo-addons-oca-account-reconcile"
version = "18.0.20250225.0"
dependencies = [
    "odoo-addon-account_reconcile_model_oca==18.0.*",
    "odoo-addon-account_statement_base==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
